# send-it

./: .gitignore  CMakeLists.txt  LICENSE  README.md  devicelist.cpp  devicelist.h  mainwindow.cpp  mainwindow.ui
android/: AndroidManifest.xml
android/src/dev/kenuki/sendit/send-it/: MulticastLockJniBridgeUtil.java
inc/: devicelist.h  filemanager.h  mainwindow.h  pelengator.h  tcpmanager.h
inc/dialogs/: dialogwidget.h
res/: mainwindow.ui
src/: devicelist.cpp  filemanager.cpp  main.cpp  mainwindow.cpp  pelengator.cpp  tcpmanager.cpp
src/dialogs/: dialogwidget.cpp
